--- a/2x.css
+++ b/2x.css
@@ -11,50 +11,27 @@ html{
     color: aliceblue;
     padding-right: 20px;
 }
-
-
-
-
-
 .container{
     width: 100%;
     float:left;
-    margin: 0 auto;
-    
-
-}
+    margin: 0 auto; }
 .main2{
     margin-right: 30%;
 position:fixed;
 top: 40%;
-left: 50%;
-
-}
-
-
+left: 50%;}
 .center{
     position: fixed;
     
-    margin-left: 30px;
-
- 
-}
-
+    margin-left: 30px;}
 .forward{
     position: static;
     margin-left: 50%;
-    top:30px auto;
-
-
-}
-
+    top:30px auto;}
 .backward{
     position: relative;
     margin-left: 40%;
-    bottom: -45px;
-
-
-}
+    bottom: -45px;}
 
 
 
